6-ghost/ghost-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog-controller
  labels:
    app: blog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: ghost
        image: allandequeiroz/ghost-the-shell:arm
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: ghost-database
          mountPath: /var/www/ghost/content/data
        - name: ghost-configuration
          mountPath: /var/www/ghost/config.production.json
      restartPolicy: Always
      volumes:
      - name: ghost-database
        hostPath:
          path: /nas/ghost
      - name: ghost-configuration
        hostPath:
          path: /nas/home-stack/6-ghost/conf/config.production.json
          type: File
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 2368
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: allandequeiroz.com
    http:
      paths:
      - path: /blog
        backend:
          serviceName: blog
          servicePort: 80
