6-ghost/ghost-traefik.yaml
#apiVersion: extensions/v1beta1
#kind: Deployment
#metadata:
#  name: blog-controller
#  labels:
#    app: blog
#    k8s-app: traefik-ingress-lb
#spec:
#  replicas: 1
#  strategy:
#    type: RollingUpdate
#  selector:
#    matchLabels:
#      app: blog
#      k8s-app: traefik-ingress-lb
#  template:
#    metadata:
#      labels:
#        k8s-app: traefik-ingress-lb
#        app: blog
#    spec:
#      containers:
#      - name: ghost
#        image: allandequeiroz/ghost-the-shell:arm
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 2368
#        volumeMounts:
#        - name: ghost-database
#          mountPath: /var/www/ghost/content/data
#        - name: ghost-configuration
#          mountPath: /var/www/ghost/config.production.json
#      restartPolicy: Always
#      volumes:
#      - name: ghost-database
#        hostPath:
#          path: /nas/ghost
#      - name: ghost-configuration
#        hostPath:
#          path: /nas/home-stack/6-ghost/conf/config.production.json
#          type: File
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    k8s-app: traefik-ingress-lb
    app: blog
  ports:
    - port: 80
      targetPort: 2368
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: allandequeiroz.com
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
